--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nookbnb-server-prod",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "src/app.js",
   "repository": "https://github.com/willshepp28/nookbnb-server.git",
   "author": "willshepp28 <willsheppard29@gmail.com>",
   "license": "MIT",
@@ -23,13 +23,17 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "faker": "^6.6.6",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "concurrently": "^8.2.1",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
